--- a/Jb-site/lore.html
+++ b/Jb-site/lore.html
@@ -124,14 +124,14 @@
     const CLEAN_LIMIT = 600;
 
     // -------- CSS injecté (mêmes classes que Home/Work/Contact)
-    const css = `
+ const css = `
       .jb-root{position:fixed;inset:auto 0 0 0;z-index:2147483646;pointer-events:none}
       .jb-layer{position:fixed;inset:0;pointer-events:none;z-index:0;}
       .jb-counter{position:fixed;right:16px;bottom:16px;z-index:1;pointer-events:none;user-select:none;
         font:12px/1.2 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#0B1211;
-        background:#41F373;border:1px solid rgba(0,0,0,.35);border-radius:6px;padding:4px 10px;display:flex;align-items:center;gap:10px}
-      .jb-counter .sq{width:12px;height:12px;background:#41F373;border:1px solid rgba(0,0,0,.35)}
-      .jb-counter .lbl{font-weight:700;text-transform:uppercase;letter-spacing:.06em}
+        background:#41F373;border:0px solid rgba(0,0,0,.35);border-radius:0px;padding:4px 10px;display:flex;align-items:center;gap:10px}
+      .jb-counter .sq{width:12px;height:12px;background:#41F373;border:0px solid rgba(0,0,0,.35)}
+      .jb-counter .lbl{font-weight:700;letter-spacing:.06em}
       .jb-counter .num{font-variant-numeric:tabular-nums;font-weight:700}
       .jb-counter .petal{width:14px;height:14px}
       .jb-square{position:fixed;pointer-events:none;mix-blend-mode:difference;background:#fff;opacity:.95;
