--- a/Jb-site/index.html
+++ b/Jb-site/index.html
@@ -7,6 +7,7 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/styles.css?v=3" />
+  
 </head>
 <body>
 
@@ -87,7 +88,7 @@
         <!-- CTA principal (avec étoiles SVG gauche/droite) -->
         <div class="cta">
           <a href="mailto:hello@designerwithmonstera.com" class="btn-hire" aria-label="Hire me">
-            <img src="assets/Img/SYMBOLE.svg" alt="" class="icon" aria-hidden="true">
+            <img src="assets/Img/SYMBOLE==g" alt="" class="icon" aria-hidden="true">
             <span>Hire me</span>
             <img src="assets/Img/SYMBOLE.svg" alt="" class="icon" aria-hidden="true">
           </a>
@@ -200,9 +201,9 @@
       .jb-layer{position:fixed;inset:0;pointer-events:none;z-index:0;}
       .jb-counter{position:fixed;right:16px;bottom:16px;z-index:1;pointer-events:none;user-select:none;
         font:12px/1.2 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#0B1211;
-        background:#41F373;border:1px solid rgba(0,0,0,.35);border-radius:6px;padding:4px 10px;display:flex;align-items:center;gap:10px}
-      .jb-counter .sq{width:12px;height:12px;background:#41F373;border:1px solid rgba(0,0,0,.35)}
-      .jb-counter .lbl{font-weight:700;text-transform:uppercase;letter-spacing:.06em}
+        background:#41F373;border:0px solid rgba(0,0,0,.35);border-radius:0px;padding:4px 10px;display:flex;align-items:center;gap:10px}
+      .jb-counter .sq{width:12px;height:12px;background:#41F373;border:0px solid rgba(0,0,0,.35)}
+      .jb-counter .lbl{font-weight:700;letter-spacing:.06em}
       .jb-counter .num{font-variant-numeric:tabular-nums;font-weight:700}
       .jb-counter .petal{width:14px;height:14px}
       .jb-square{position:fixed;pointer-events:none;mix-blend-mode:difference;background:#fff;opacity:.95;
