--- a/Jb-site/work/poster.html
+++ b/Jb-site/work/poster.html
@@ -194,40 +194,7 @@
   <!-- espace supplémentaire AVANT le footer -->
   <div class="footer-spacer" aria-hidden="true"></div>
 
-  <!-- Footer -->
-  <footer class="site-footer" id="footer">
-    <div class="footer-card">
-      <div class="footer-inner">
-        <div class="footer-top">
-          <div class="footer-left">
-            <img class="footer-logo" src="../assets/Img/SYMBOLE.svg" alt="JBAB">
-            <div class="foot-label">Navigation</div>
-            <nav class="footer-nav" aria-label="Footer">
-              <a href="../index.html">Home</a>
-              <a href="../work.html">Work</a>
-              <a href="../lore.html">Lore</a>
-              <a href="../contact.html">Contact</a>
-            </nav>
-          </div>
-
-          <ul class="footer-contacts">
-            <li class="foot-label">Contact</li>
-            <li><a href="mailto:hello@jbab.studio">hello@jbab.studio</a></li>
-            <li><a href="tel:+33123456789">+33 1 23 45 67 89</a></li>
-            <li class="social">
-              <a href="https://instagram.com" target="_blank" rel="noopener">IG</a>
-              <a href="https://x.com" target="_blank" rel="noopener">X</a>
-              <a href="https://github.com" target="_blank" rel="noopener">GH</a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="footer-giant" aria-hidden="true">
-          <span>JBAB</span>
-        </div>
-      </div>
-    </div>
-  </footer>
+<div class="posters-bottom-gap" aria-hidden="true"></div>
 
   <!-- JS -->
   <script src="../script.js" defer></script>
