--- a/Jb-site/index.html
+++ b/Jb-site/index.html
@@ -28,7 +28,7 @@
   <section id="hero">
     <div id="stage-wrap">
       <div id="stage">
-        <img src="assets/img/LANDING/LANDING FULL.png" alt="Hero" class="hero" />
+        <img src="assets/Img/LANDING/LANDING FULL.png" alt="Hero" class="hero" />
         <div class="hero-hotspots" aria-hidden="true">
           <a href="#"></a><a href="#"></a><a href="#"></a><a href="#"></a>
         </div>
@@ -88,7 +88,7 @@
         <!-- CTA principal (avec étoiles SVG gauche/droite) -->
         <div class="cta">
           <a href="mailto:hello@designerwithmonstera.com" class="btn-hire" aria-label="Hire me">
-            <img src="assets/Img/SYMBOLE==g" alt="" class="icon" aria-hidden="true">
+            <img src="assets/Img/SYMBOLE.svg" alt="" class="icon" aria-hidden="true">
             <span>Hire me</span>
             <img src="assets/Img/SYMBOLE.svg" alt="" class="icon" aria-hidden="true">
           </a>
@@ -99,35 +99,35 @@
           <ul class="posters grid-12" role="list">
             <!-- Row 1 — 3 posters -->
             <li class="item portrait"  style="--col-start:1;  --col-span:4;">
-              <figure><img loading="lazy" src="assets/img/HOME PROJECT/p1.png" alt="Poster — Kim Chaewon"></figure>
+              <figure><img loading="lazy" src="assets/Img/HOME PROJECT/p1.png" alt="Poster — Kim Chaewon"></figure>
             </li>
             <li class="item portrait"  style="--col-start:5;  --col-span:4;">
-              <figure><img loading="lazy" src="assets/img/HOME PROJECT/p2.png" alt="Poster — Pink vibes"></figure>
+              <figure><img loading="lazy" src="assets/Img/HOME PROJECT/p2.png" alt="Poster — Pink vibes"></figure>
             </li>
             <li class="item portrait"  style="--col-start:9;  --col-span:4;">
-              <figure><img loading="lazy" src="assets/img/HOME PROJECT/p3.png" alt="Poster — Green floor"></figure>
+              <figure><img loading="lazy" src="assets/Img/HOME PROJECT/p3.png" alt="Poster — Green floor"></figure>
             </li>
 
             <!-- Row 2 — 2 magazines -->
             <li class="item magazine"  style="--col-start:2;  --col-span:5;">
-              <figure><img loading="lazy" src="assets/img/HOME PROJECT/m1.png" alt="Magazine — Green cover"></figure>
+              <figure><img loading="lazy" src="assets/Img/HOME PROJECT/m1.png" alt="Magazine — Green cover"></figure>
             </li>
             <li class="item magazine"  style="--col-start:7;  --col-span:5;">
-              <figure><img loading="lazy" src="assets/img/HOME PROJECT/m2.png" alt="Magazine — Pink duo"></figure>
+              <figure><img loading="lazy" src="assets/Img/HOME PROJECT/m2.png" alt="Magazine — Pink duo"></figure>
             </li>
 
             <!-- Row 3 — 4 brandings -->
             <li class="item branding" style="--col-start:1;  --col-span:3;">
-              <figure><img loading="lazy" src="assets/img/HOME PROJECT/b1.png" alt="Visual Creators — Billboard"></figure>
+              <figure><img loading="lazy" src="assets/Img/HOME PROJECT/b1.png" alt="Visual Creators — Billboard"></figure>
             </li>
             <li class="item branding" style="--col-start:4;  --col-span:3;">
-              <figure><img loading="lazy" src="assets/img/HOME PROJECT/b2.png" alt="Sauce Tomate Crème — Tote"></figure>
+              <figure><img loading="lazy" src="assets/Img/HOME PROJECT/b2.png" alt="Sauce Tomate Crème — Tote"></figure>
             </li>
             <li class="item branding" style="--col-start:7;  --col-span:3;">
-              <figure><img loading="lazy" src="assets/img/HOME PROJECT/b3.png" alt="La Chapina — Signage"></figure>
+              <figure><img loading="lazy" src="assets/Img/HOME PROJECT/b3.png" alt="La Chapina — Signage"></figure>
             </li>
             <li class="item branding" style="--col-start:10; --col-span:3;">
-              <figure><img loading="lazy" src="assets/img/HOME PROJECT/b4.png" alt="Aldea — Facade"></figure>
+              <figure><img loading="lazy" src="assets/Img/HOME PROJECT/b4.png" alt="Aldea — Facade"></figure>
             </li>
           </ul>
 
