--- a/Jb-site/work/branding.html
+++ b/Jb-site/work/branding.html
@@ -4,8 +4,6 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Branding — JBAB</title>
-
-  <!-- Utilise ton CSS principal (chemin relatif depuis /work/) -->
   <link rel="stylesheet" href="../css/styles.css?v=branding" />
 </head>
 <body class="page-branding">
@@ -20,145 +18,141 @@
     </nav>
   </header>
 
-  <!-- Grille overlay -->
+  <!-- Lignes verticales -->
   <div class="page-grid" aria-hidden="true"></div>
 
-  <!-- Hero / badge remplacé par BRANDING.png -->
-  <section class="mag-scene" style="padding-top:8vh;">
-    <div class="page-container" style="max-width:1728px;margin:0 auto;padding:6vh 24px;">
-      <div style="text-align:center;margin-bottom:3.2rem;">
-        <img
-          src="../assets/Img/WORK/BRANDING/BRANDING.png"
-          alt="BRANDING — JBAB"
-          class="branding-badge-img"
-        />
-      </div>
+  <!-- Hero -->
+  <section class="branding-hero">
+    <div class="page-container">
+      <img src="../assets/Img/WORK/BRANDING/BRANDING.png"
+           alt="Branding — JBAB"
+           class="branding-badge-img"
+           loading="eager"
+           decoding="async" />
     </div>
   </section>
 
-  <!-- Main content — projects -->
-  <main class="branding-scene page-container" role="main" aria-label="Branding projects" style="max-width:1728px;margin:0 auto;padding:0 24px 6vh;">
+  <!-- Projects -->
+  <main class="branding-scene page-container" role="main" aria-label="Branding projects">
+
     <!-- Project: VC -->
-    <section class="branding-project" id="vc" style="margin-bottom:6rem;">
-      <header class="branding-head" style="display:grid;grid-template-columns:60px 1fr auto;gap:24px;align-items:start;margin-bottom:18px;">
-        <div class="idx" style="font-family:Clash Display;font-weight:600;">01</div>
+    <section class="branding-project" id="vc">
+      <header class="branding-head">
+        <div class="idx">01</div>
         <div>
-          <h2 class="title" style="margin:0 0 6px;font-family:Epilogue;font-weight:600;">VC</h2>
-          <p class="desc" style="margin:0;opacity:.85;">Visual Creator identity system — logotype, color & asset pack.</p>
+          <h2 class="title">VC</h2>
+          <p class="desc">Visual Creator identity system — logotype, color & asset pack.</p>
         </div>
-        <div class="meta" style="text-align:right;">
+        <div class="meta">
           <div class="year"><strong>2024</strong></div>
-          <div class="sector" style="opacity:.85;font-size:.95rem">Sector: Personal / Creator</div>
+          <div class="sector">Sector: Personal / Creator</div>
         </div>
       </header>
-      <div class="branding-gallery gallery-grid" style="display:grid;grid-template-columns:repeat(12,1fr);gap:16px;">
-        <figure style="grid-column: span 4"><img src="../assets/Img/WORK/BRANDING/VC/1.png" alt="VC 1"></figure>
-        <figure style="grid-column: span 4"><img src="../assets/Img/WORK/BRANDING/VC/2.png" alt="VC 2"></figure>
-        <figure style="grid-column: span 4"><img src="../assets/Img/WORK/BRANDING/VC/3.png" alt="VC 3"></figure>
+      <div class="branding-gallery">
+        <figure><img src="../assets/Img/WORK/BRANDING/VC/1.png" alt="VC 1"></figure>
+        <figure><img src="../assets/Img/WORK/BRANDING/VC/2.png" alt="VC 2"></figure>
+        <figure><img src="../assets/Img/WORK/BRANDING/VC/3.png" alt="VC 3"></figure>
       </div>
     </section>
 
-    <!-- Project: ALDEA -->
-    <section class="branding-project" id="aldea" style="margin-bottom:6rem;">
-      <header class="branding-head" style="display:grid;grid-template-columns:60px 1fr auto;gap:24px;align-items:start;margin-bottom:18px;">
-        <div class="idx" style="font-family:Clash Display;font-weight:600;">02</div>
+    <!-- Project: Aldea -->
+    <section class="branding-project" id="aldea">
+      <header class="branding-head">
+        <div class="idx">02</div>
         <div>
-          <h2 class="title" style="margin:0 0 6px;font-family:Epilogue;font-weight:600;">Aldea</h2>
-          <p class="desc" style="margin:0;opacity:.85;">Brand identity and packaging explorations for Aldea.</p>
+          <h2 class="title">Aldea</h2>
+          <p class="desc">Brand identity and packaging explorations for Aldea.</p>
         </div>
-        <div class="meta" style="text-align:right;">
+        <div class="meta">
           <div class="year"><strong>2023</strong></div>
-          <div class="sector" style="opacity:.85;font-size:.95rem">Sector: Food / Packaging</div>
+          <div class="sector">Sector: Food / Packaging</div>
         </div>
       </header>
-      <div class="branding-gallery" style="display:grid;grid-template-columns:repeat(12,1fr);gap:16px;">
-        <figure style="grid-column: span 6"><img src="../assets/Img/WORK/BRANDING/ALDEA/1.png" alt="Aldea 1"></figure>
-        <figure style="grid-column: span 6"><img src="../assets/Img/WORK/BRANDING/ALDEA/2 (1).png" alt="Aldea 2"></figure>
+      <div class="branding-gallery">
+        <figure><img src="../assets/Img/WORK/BRANDING/ALDEA/1.png" alt="Aldea 1"></figure>
+        <figure><img src="../assets/Img/WORK/BRANDING/ALDEA/2.png" alt="Aldea 2"></figure>
       </div>
     </section>
 
-    <!-- Project: CHAPINA -->
-    <section class="branding-project" id="chapina" style="margin-bottom:6rem;">
-      <header class="branding-head" style="display:grid;grid-template-columns:60px 1fr auto;gap:24px;align-items:start;margin-bottom:18px;">
-        <div class="idx" style="font-family:Clash Display;font-weight:600;">03</div>
+    <!-- Project: Chapina -->
+    <section class="branding-project" id="chapina">
+      <header class="branding-head">
+        <div class="idx">03</div>
         <div>
-          <h2 class="title" style="margin:0 0 6px;font-family:Epilogue;font-weight:600;">Chapina</h2>
-          <p class="desc" style="margin:0;opacity:.85;">Visual identity and illustrations for Chapina project.</p>
+          <h2 class="title">Chapina</h2>
+          <p class="desc">Visual identity and illustrations for Chapina project.</p>
         </div>
-        <div class="meta" style="text-align:right;">
+        <div class="meta">
           <div class="year"><strong>2022</strong></div>
-          <div class="sector" style="opacity:.85;font-size:.95rem">Sector: Culture</div>
+          <div class="sector">Sector: Culture</div>
         </div>
       </header>
-      <div class="branding-gallery" style="display:grid;grid-template-columns:repeat(12,1fr);gap:16px;">
-        <figure style="grid-column: span 6"><img src="../assets/Img/WORK/BRANDING/CHAPINA/1.png" alt="Chapina 1"></figure>
-        <figure style="grid-column: span 6"><img src="../assets/Img/WORK/BRANDING/CHAPINA/2.png" alt="Chapina 2"></figure>
+      <div class="branding-gallery">
+        <figure><img src="../assets/Img/WORK/BRANDING/CHAPINA/1.png" alt="Chapina 1"></figure>
+        <figure><img src="../assets/Img/WORK/BRANDING/CHAPINA/2.png" alt="Chapina 2"></figure>
       </div>
     </section>
 
-    <!-- Project: LORK STREAM -->
-    <section class="branding-project" id="lork-stream" style="margin-bottom:6rem;">
-      <header class="branding-head" style="display:grid;grid-template-columns:60px 1fr auto;gap:24px;align-items:start;margin-bottom:18px;">
-        <div class="idx" style="font-family:Clash Display;font-weight:600;">04</div>
+    <!-- Project: Lork Stream -->
+    <section class="branding-project" id="lork-stream">
+      <header class="branding-head">
+        <div class="idx">04</div>
         <div>
-          <h2 class="title" style="margin:0 0 6px;font-family:Epilogue;font-weight:600;">Lork Stream</h2>
-          <p class="desc" style="margin:0;opacity:.85;">Full Twitch identity system — logo, overlays, transitions, emotes, thumbnails and visual language.</p>
+          <h2 class="title">Lork Stream</h2>
+          <p class="desc">Full Twitch identity system — logo, overlays, transitions, emotes, thumbnails and visual language.</p>
         </div>
-        <div class="meta" style="text-align:right;">
+        <div class="meta">
           <div class="year"><strong>2024</strong></div>
-          <div class="sector" style="opacity:.85;font-size:.95rem">Sector: Streaming / Entertainment</div>
+          <div class="sector">Sector: Streaming / Entertainment</div>
         </div>
       </header>
-      <div class="branding-gallery" style="display:grid;grid-template-columns:repeat(12,1fr);gap:16px;">
-        <!-- images 1..21 -->
-        <figure style="grid-column: span 4"><img src="../assets/Img/WORK/BRANDING/LORK STREAM/1.png" alt="Lork Stream 1"></figure>
-        <figure style="grid-column: span 4"><img src="../assets/Img/WORK/BRANDING/LORK STREAM/2.png" alt="Lork Stream 2"></figure>
-        <figure style="grid-column: span 4"><img src="../assets/Img/WORK/BRANDING/LORK STREAM/3.png" alt="Lork Stream 3"></figure>
-        <!-- … etc jusqu’à 21 -->
+      <div class="branding-gallery">
+        <figure><img src="../assets/Img/WORK/BRANDING/LORK STREAM/1.png" alt="Lork Stream 1"></figure>
+        <figure><img src="../assets/Img/WORK/BRANDING/LORK STREAM/2.png" alt="Lork Stream 2"></figure>
+        <figure><img src="../assets/Img/WORK/BRANDING/LORK STREAM/3.png" alt="Lork Stream 3"></figure>
+        <!-- … jusqu’à 21 -->
       </div>
     </section>
 
-    <!-- Project: MAISON FUSCHIA -->
-    <section class="branding-project" id="maison-fuschia" style="margin-bottom:6rem;">
-      <header class="branding-head" style="display:grid;grid-template-columns:60px 1fr auto;gap:24px;align-items:start;margin-bottom:18px;">
-        <div class="idx" style="font-family:Clash Display;font-weight:600;">05</div>
+    <!-- Project: Maison Fuschia -->
+    <section class="branding-project" id="maison-fuschia">
+      <header class="branding-head">
+        <div class="idx">05</div>
         <div>
-          <h2 class="title" style="margin:0 0 6px;font-family:Epilogue;font-weight:600;">Maison Fuschia</h2>
-          <p class="desc" style="margin:0;opacity:.85;">Brand system and editorial for Maison Fuschia — type, patterns and application.</p>
+          <h2 class="title">Maison Fuschia</h2>
+          <p class="desc">Brand system and editorial for Maison Fuschia — type, patterns and application.</p>
         </div>
-        <div class="meta" style="text-align:right;">
+        <div class="meta">
           <div class="year"><strong>2021</strong></div>
-          <div class="sector" style="opacity:.85;font-size:.95rem">Sector: Editorial / Fashion</div>
+          <div class="sector">Sector: Editorial / Fashion</div>
         </div>
       </header>
-      <div class="branding-gallery" style="display:grid;grid-template-columns:repeat(12,1fr);gap:16px;">
-        <figure style="grid-column: span 6"><img src="../assets/Img/WORK/BRANDING/MAISON FUSCHIA/1.png" alt="Maison Fuschia 1"></figure>
-        <figure style="grid-column: span 6"><img src="../assets/Img/WORK/BRANDING/MAISON FUSCHIA/2.png" alt="Maison Fuschia 2"></figure>
+      <div class="branding-gallery">
+        <figure><img src="../assets/Img/WORK/BRANDING/MAISON FUSCHIA/1.png" alt="Maison Fuschia 1"></figure>
+        <figure><img src="../assets/Img/WORK/BRANDING/MAISON FUSCHIA/2.png" alt="Maison Fuschia 2"></figure>
       </div>
     </section>
 
     <!-- Project: STO -->
-    <section class="branding-project" id="sto" style="margin-bottom:6rem;">
-      <header class="branding-head" style="display:grid;grid-template-columns:60px 1fr auto;gap:24px;align-items:start;margin-bottom:18px;">
-        <div class="idx" style="font-family:Clash Display;font-weight:600;">06</div>
+    <section class="branding-project" id="sto">
+      <header class="branding-head">
+        <div class="idx">06</div>
         <div>
-          <h2 class="title" style="margin:0 0 6px;font-family:Epilogue;font-weight:600;">STO</h2>
-          <p class="desc" style="margin:0;opacity:.85;">Visual identity and system for STO — logos and applications.</p>
+          <h2 class="title">STO</h2>
+          <p class="desc">Visual identity and system for STO — logos and applications.</p>
         </div>
-        <div class="meta" style="text-align:right;">
+        <div class="meta">
           <div class="year"><strong>2022</strong></div>
-          <div class="sector" style="opacity:.85;font-size:.95rem">Sector: Corporate</div>
+          <div class="sector">Sector: Corporate</div>
         </div>
       </header>
-      <div class="branding-gallery" style="display:grid;grid-template-columns:repeat(12,1fr);gap:16px;">
-        <figure style="grid-column: span 15"><img src="../assets/Img/WORK/BRANDING/STO.png" alt="STO 1"></figure>
+      <div class="branding-gallery">
+        <figure><img src="../assets/Img/WORK/BRANDING/STO.png" alt="STO"></figure>
       </div>
     </section>
   </main>
 
-
-
-  <!-- Script global -->
+  <!-- JS -->
   <script src="../script.js" defer></script>
 </body>
 </html>
