--- a/Jb-site/work/magazine.html
+++ b/Jb-site/work/magazine.html
@@ -25,7 +25,7 @@
   <!-- Badge * magazine * en PNG -->
   <div class="mag-badge" aria-hidden="true">
     <img
-      src="/Users/jean-baptistedelpierre/Downloads/WEBSITE-2025-v0-landing-main/Jb-site/assets/Img/WORK/MAGAZINE/magazine.png"
+      src="../assets/Img/WORK/MAGAZINE/magazine.png"
       alt="* magazine *"
       class="mag-badge-img"
       draggable="false"
