--- a/Jb-site/work/poster.html
+++ b/Jb-site/work/poster.html
@@ -31,117 +31,94 @@
   <!-- GALERIE -->
   <main role="main" aria-label="Poster gallery">
     <ul class="posters grid-12" role="list">
-      <!-- 1 -->
+      <!-- Posters (01 → 16) -->
       <li class="item portrait" style="--col-start:1; --col-span:4;">
         <a class="tile" href="#p-apt">
           <figure><img loading="lazy" src="../assets/Img/WORK/Posters/APT-Poster-V3-LOW.png" alt="APT — I’m on my way"></figure>
         </a>
       </li>
-      <!-- 2 -->
       <li class="item portrait" style="--col-start:5; --col-span:4;">
         <a class="tile" href="#p-houdi">
           <figure><img loading="lazy" src="../assets/Img/WORK/Posters/HOUDI-POSTER-min.png" alt="Houdi Hood"></figure>
         </a>
       </li>
-      <!-- 3 -->
       <li class="item portrait" style="--col-start:9; --col-span:4;">
         <a class="tile" href="#p-kim">
           <figure><img loading="lazy" src="../assets/Img/WORK/Posters/POSTER-KIM-CHAEWON-min.png" alt="Kim Chaewon"></figure>
         </a>
       </li>
-      <!-- 4 -->
       <li class="item portrait" style="--col-start:2; --col-span:4;">
         <a class="tile" href="#p-halsey">
           <figure><img loading="lazy" src="../assets/Img/WORK/Posters/halsey.jpg" alt="Halsey"></figure>
         </a>
       </li>
-      <!-- 5 -->
       <li class="item portrait" style="--col-start:7; --col-span:4;">
         <a class="tile" href="#p-bibi">
           <figure><img loading="lazy" src="../assets/Img/WORK/Posters/BIBI-OMEGA-LOW.png" alt="THE BIBI IMPACT"></figure>
         </a>
       </li>
-      <!-- 6 -->
       <li class="item portrait" style="--col-start:1; --col-span:4;">
         <a class="tile" href="#p-ultra">
           <figure><img loading="lazy" src="../assets/Img/WORK/Posters/ULTRA-LOW.png" alt="ULTRA"></figure>
         </a>
       </li>
-      <!-- 7 -->
       <li class="item portrait" style="--col-start:5; --col-span:4;">
         <a class="tile" href="#p-keria">
           <figure><img loading="lazy" src="../assets/Img/WORK/Posters/KERIA-FAN-POSTER.png" alt="Keria — Fan poster"></figure>
         </a>
       </li>
-      <!-- 8 -->
       <li class="item portrait" style="--col-start:9; --col-span:4;">
         <a class="tile" href="#p-juice">
           <figure><img loading="lazy" src="../assets/Img/WORK/Posters/POSTER-JUICE-V3.png" alt="Passionnément (Juice)"></figure>
         </a>
       </li>
-      <!-- 9 -->
       <li class="item portrait" style="--col-start:2; --col-span:4;">
         <a class="tile" href="#p-cover">
           <figure><img loading="lazy" src="../assets/Img/WORK/Posters/COVER-LOW.png" alt="Euphoria — cover"></figure>
         </a>
       </li>
-      <!-- 10 -->
       <li class="item portrait" style="--col-start:7; --col-span:4;">
         <a class="tile" href="#p-bauhaus">
           <figure><img loading="lazy" src="../assets/Img/WORK/Posters/BAUHAUS-LOW.png" alt="Make Bauhaus Again"></figure>
         </a>
       </li>
-      <!-- 11 -->
       <li class="item portrait" style="--col-start:1; --col-span:4;">
         <a class="tile" href="#p-v1">
           <figure><img loading="lazy" src="../assets/Img/WORK/Posters/V1-LOW.jpg" alt="V1 — Low"></figure>
         </a>
       </li>
-      <!-- 12 -->
       <li class="item portrait" style="--col-start:5; --col-span:4;">
         <a class="tile" href="#p-capture">
           <figure><img loading="lazy" src="../assets/Img/WORK/Posters/Capture-decran-2025-05-23-a-14.54.45.png" alt="Matière Terrestre"></figure>
         </a>
       </li>
-      <!-- 13 -->
       <li class="item portrait" style="--col-start:9; --col-span:4;">
         <a class="tile" href="#p-wood-principal">
           <figure><img loading="lazy" src="../assets/Img/WORK/Posters/POSTER-WOODSTOCK-2969-PRINCIPAL-V2.png" alt="WOODSTOCK 2969 — Principal V2"></figure>
         </a>
       </li>
-      <!-- 14 -->
       <li class="item portrait" style="--col-start:2; --col-span:4;">
         <a class="tile" href="#p-wood-asap">
           <figure><img loading="lazy" src="../assets/Img/WORK/Posters/POSTER-WOODSTOCK-2969-DECLI-ASAP-V1.png" alt="WOODSTOCK 2969 — Déclinaison ASAP"></figure>
         </a>
       </li>
-      <!-- 15 -->
       <li class="item portrait" style="--col-start:7; --col-span:4;">
         <a class="tile" href="#p-wood-tyler">
           <figure><img loading="lazy" src="../assets/Img/WORK/Posters/POSTER-WOODSTOCK-2969-DECLI-TYLER-V1.png" alt="WOODSTOCK 2969 — Déclinaison TYLER"></figure>
         </a>
       </li>
-      <!-- 16 -->
       <li class="item portrait" style="--col-start:1; --col-span:4;">
         <a class="tile" href="#p-wood-vectoriel">
           <figure><img loading="lazy" src="../assets/Img/WORK/Posters/POSTER-WOODSTOCK-2969-VECTORIEL.png" alt="WOODSTOCK 2969 — Vectoriel"></figure>
         </a>
       </li>
-      <!-- 17 (optionnel) -->
-      <!--
-      <li class="item portrait" style="--col-start:5; --col-span:4;">
-        <a class="tile" href="#p-join1">
-          <figure><img loading="lazy" src="../assets/Img/WORK/Posters/POSTER-WOODS...-V1.png" alt="Join us — v1"></figure>
-        </a>
-      </li>
-      -->
     </ul>
 
     <!-- Espace avant footer -->
     <div class="posters-bottom-gap" aria-hidden="true"></div>
   </main>
 
-  <!-- LIGHTBOXES -->
+  <!-- LIGHTBOXES (mêmes corrections de chemin) -->
   <div id="p-apt" class="lb" aria-hidden="true"><a class="lb-close" href="#"></a>
     <figure class="lb-figure"><img src="../assets/Img/WORK/Posters/APT-Poster-V3-LOW.png" alt=""><figcaption>APT — I’m on my way</figcaption></figure>
   </div>
@@ -193,8 +170,7 @@
 
   <!-- espace supplémentaire AVANT le footer -->
   <div class="footer-spacer" aria-hidden="true"></div>
-
-<div class="posters-bottom-gap" aria-hidden="true"></div>
+  <div class="posters-bottom-gap" aria-hidden="true"></div>
 
   <!-- JS -->
   <script src="../script.js" defer></script>
