--- a/Jb-site/work/video.html
+++ b/Jb-site/work/video.html
@@ -24,7 +24,7 @@
 
   <!-- Badge FIXE -->
   <div class="videos-fixed" aria-hidden="true">
-    <img src="../assets/Img/WORK/vidéo.png" alt="vidéo" />
+    <img src="../assets/Img/WORK/VIDÉO.png" alt="vidéo" />
   </div>
 
   <!-- CONTENU -->
@@ -116,9 +116,6 @@
         cover.style.display = "none";
       });
     });
-
-    
   </script>
 </body>
-
 </html>
